# Clockin

./: .dockerignore  Cargo.toml  Dockerfile  build.rs  default.nix  flake.nix
.github/workflows/: deploy-image.yml
src/: binnacle_2.rs  binnacle_body_parser.rs  cli.rs  file.rs  format_util.rs  main.rs  parser.rs  subscribe.rs  summary.rs  writer.rs
