[package]
name = "clockin"
version = "0.2.0"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.99"
chrono = "0.4.41"
clap = { version = "4.5.45", features = ["derive"] }
ctrlc = { version = "3.4.7", features = ["termination"] }

[build-dependencies]
clap = { version = "4.5.45", features = ["derive"] }
clap_complete = "4.5.57"
chrono = "0.4.41"
