[package]
name = "clockin"
version = "0.5.4"
edition = "2024"
build = "build.rs"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.43"
clap = { version = "4.5.56", features = ["derive"] }
ctrlc = { version = "3.5.1", features = ["termination"] }
itertools = "0.14.0"
notify = "8.2.0"
notify-debouncer-full = "0.7.0"
thiserror = "2.0.18"

[build-dependencies]
clap = { version = "4.5.56", features = ["derive"] }
clap_complete = "4.5.65"
chrono = "0.4.43"
